k8s/production/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-devops-task-frontend
spec:
  selector:
    matchLabels:
      app: production-devops-task-frontend
  replicas: 1 # tells deployment to run 3 pods matching the template
  template:
    metadata:
      labels:
        app: production-devops-task-frontend
    spec:
      terminationGracePeriodSeconds: 70
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node.kubernetes.io/instance-type
                operator: In
                values:
                - t3a.medium
      containers:
      - name: production-devops-task-frontend-container
        image: 392.dkr.ecr.ap-southeast-1.amazonaws.com/production-devops-task-frontend:115d9881
        #imagePullPolicy: Never
        ports:
          - containerPort: 5000
        lifecycle:
          preStop: 
            exec:
              command: ["/bin/sh", "-c", "sleep 40"]
        resources:
          requests:
            cpu: "1000m"
            memory: "2000Mi"
          limits:
            cpu: "1000m"
            memory: "2000Mi"
        volumeMounts:
        - name: config-volume
          mountPath: /app/.env
          subPath: .env
      volumes:
      - name: config-volume
        configMap:
          name: production-devops-task-frontend-config
