k8s/production/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-devops-task-frontend-svc
spec:
  selector:
    app: production-devops-task-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
